# font-andika-mtihani

./: .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  FONTLOG.txt  OFL-FAQ.txt  OFL.txt  Pipfile  README.md  README.txt  fontbakery.yaml  org.scripts.sil.font-andika-mtihani.metainfo.xml  org.sil.font-andika-mtihani.metainfo.xml  preflight  preflightff  preflightfl  preflightg  prefontlab  preglyphs  pyproject.toml  update-preflight-libraries-pipenv.sh  update-preflight-libraries-poetry.sh  update-preflight-libraries-usermode.sh  update-preflight-libraries-venv.sh  wscript
source/: AndikaMtihani-IBI.designspace  AndikaMtihani-IBI.glyphs  AndikaMtihani-RB.glyphs  AndikaMtihani-RBmanual.designspace  AndikaMtihani.designspace  AndikaMtihaniFLCRoman.designspace  AndikaMtihaniItalic.designspace  AndikaMtihaniItalic.glyphs  AndikaMtihaniRoman.glyphs  composites.txt  composites.xml  compositetest.txt  glyph_data.csv
source/AndikaMtihani-B.v3.ufo/: fontinfo.plist
source/AndikaMtihani-BI.ufo/: lib.plist
source/AndikaMtihani-BI.v3.ufo/: metainfo.plist
source/AndikaMtihani-Bold-bk.ufo/: fontinfo.plist  lib.plist
source/AndikaMtihani-Bold.ufo/: features.fea  fontinfo.plist  lib.plist
source/AndikaMtihani-Bold.v3.ufo/: lib.plist
source/AndikaMtihani-BoldItalic-bk.ufo/: fontinfo.plist  lib.plist
source/AndikaMtihani-BoldItalic.ufo/: fontinfo.plist  lib.plist
tests/: Latin.sil  README.txt  fbchecks.py  ttfcheck.py  ufocheck.py
tools/: fontbakery-profile.py  fontbakery-projectchecks.py  fontbakery-ttfchecks.py  fontbakery-ufochecks.py
(+3498 files in other folders)
